# Initialization
AC_INIT

PACKAGE=gvfs-dav-mount
VERSION=0.10

AC_SUBST(PACKAGE)
AC_SUBST(VERSION)

AM_INIT_AUTOMAKE($PACKAGE, $VERSION)
AM_CONFIG_HEADER(config.h)


# Used programs

AC_PROG_CC
AM_PROG_LIBTOOL


# Check for pkg-config

AC_CHECK_PROG(HAVE_PKGCONFIG, pkg-config, yes, no)
AC_PATH_PROG(PKG_CONFIG, pkg-config, no)
if test "x$HAVE_PKGCONFIG" = "xno"; then
        AC_MSG_ERROR(you need to have pkgconfig installed !)
fi


# Dependency checks

GTK_REQUIRED=2.13.1
GIO_REQUIRED=2.15.7
LIBXML_REQUIRED=2.6.0
SOUP_REQUIRED=2.3.0

PKG_CHECK_MODULES(GTK, gio-2.0 >= $GIO_REQUIRED gtk+-2.0 >= $GTK_REQUIRED)
PKG_CHECK_MODULES(XML, libxml-2.0 >= $LIBXML_REQUIRED)
PKG_CHECK_MODULES(SOUP, libsoup-2.4 >= $SOUP_REQUIRED)

# Make dependency CFLAGS and LIBS available

AC_SUBST(GTK_CFLAGS)
AC_SUBST(GTK_LIBS)

AC_SUBST(XML_CFLAGS)
AC_SUBST(XML_LIBS)

AC_SUBST(SOUP_CFLAGS)
AC_SUBST(SOUP_LIBS)
# i18n

GETTEXT_PACKAGE=gvfs-dav-mount
AC_SUBST([GETTEXT_PACKAGE])
AC_DEFINE_UNQUOTED([GETTEXT_PACKAGE], "$GETTEXT_PACKAGE", [Gettext package])
AM_GLIB_GNU_GETTEXT
IT_PROG_INTLTOOL([0.35.0])


# output

AC_OUTPUT([
        Makefile
])
